Make sure we always get a valid pointer to the auxillary frame. Fixes crashes

BUG: 306139